--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake Game</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="snake.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1 class="mt-3"><b>Snake Game</b></h1>
@@ -94,3 +94,4 @@
     </script>
 </body>
 </html>
+
